tests/negative/gold/invalid-class-name-instance-test.gold
tests/negative/invalid-class-name-instance-test.toit:5:7: error: Expected class name
class :
      ^
tests/negative/invalid-class-name-instance-test.toit:7:10: error: No method 'bar' in this class
    this.bar
         ^~~
Compilation failed
